# vcardtools

./: pyproject.toml
