[tool.poetry]
name = "vcardtools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fuzzywuzzy = "0.18.0"
python-dateutil = "2.9.0.post0"
pytz = "2024.2"
six = "1.16.0"
unidecode = "1.3.8"
vobject = "0.9.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
